# path_planning_tutorial

./: CMakeLists.txt  README.md  package.xml
include/astar_planner/in_2d_configuration_space/: astar_planner_2d.h  astar_planner_2d_node.h  configuration_2d.h
include/astar_planner/in_3d_configuration_space/: astar_planner_3d.h  astar_planner_3d_node.h  configuration_3d.h
include/collision_detector/: collision_detector.h  primitive_aabb.h  primitive_box.h  primitive_circle.h  primitive_obb.h
include/path_planning_tutorial/: utils.h  visualization.h
map/: fr079.ot2  simple_scene.ot2
rviz/: test_collision_detector.rviz  tutorial_1.rviz  tutorial_2.rviz  tutorial_3.rviz
scene/: path-planning-example.ttt
src/: astar_planner_tutorial_1.cpp  astar_planner_tutorial_2.cpp  astar_planner_tutorial_3.cpp  test_collision_detector_node.cpp
src/astar_planner/in_2d_configuration_space/: astar_planner_2d.cpp
src/astar_planner/in_3d_configuration_space/: astar_planner_3d.cpp
src/collision_detector/: collision_detector.cpp
